tests/rosetta/out/C/associative-array-creation.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:41Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
map_string_int removeKey(map_string_int m, char *k) {
  map_string_int tmp1 = map_string_int_create(0);
  map_string_int out = tmp1;
  for (int tmp2 = 0; tmp2 < m.len; tmp2++) {
    char *key = m.data[tmp2].key;
    if ((strcmp(key, k) != 0)) {
      map_string_int_put(&out, key, map_string_int_get(m, key));
    }
  }
  return out;
}

int mochi_main() {
  map_string_int x = 0;
  map_string_int tmp3 = map_string_int_create(0);
  x = tmp3;
  map_string_int_put(&x, "foo", 3);
  int y1 = map_string_int_get(x, "bar");
  int ok = map_string_int_contains(x, "bar");
  printf("%d\n", y1);
  printf("%s\n", (ok) ? "true" : "false");
  x = removeKey(x, "foo");
  map_string_int tmp4 = map_string_int_create(3);
  map_string_int_put(&tmp4, "foo", 2);
  map_string_int_put(&tmp4, "bar", 42);
  map_string_int_put(&tmp4, "baz", (-1));
  x = tmp4;
  printf("%d %d %d\n", map_string_int_get(x, "foo"),
         map_string_int_get(x, "bar"), map_string_int_get(x, "baz"));
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
